  * Recommend dmraid to ensure consistent behaviour across Ubuntu flavours
    (it was already present on the Ubuntu desktop CD, but e.g. not on
    Kubuntu).
  * If dmraid devices are active, then create
    /var/lib/disk-detect/activate_dmraid so that partman will exclude slave
    devices, and ensure that dmraid is installed in the target (LP: #90235).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 14 Oct 2009 00:04:17 +0100

ubiquity (1.99.32) karmic; urgency=low

  * ubi-intro.py: detect kubuntu-netbook-intro.txt if it exists and use
    that as warning for Kubuntu Netbook Edition

 -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 08 Oct 2009 17:06:15 +0100

ubiquity (1.99.31) karmic; urgency=low

  [ Evan Dandrea ]
  * Handle DATA commands in debconffilter.  Support PROGRESS in the apt-
    setup component (LP: #445385).

  [ Colin Watson ]
  * Automatic update of included source packages: debian-installer-utils
    1.70ubuntu2, partman-target 64ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 07 Oct 2009 22:49:30 +0100

ubiquity (1.99.30) karmic; urgency=low

  * Automatic update of included source packages: partman-base 133ubuntu3,
    partman-basicfilesystems 63ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 06 Oct 2009 22:47:19 +0100

ubiquity (1.99.29) karmic; urgency=low

  [ Colin Watson ]
  * Use a separate PROGRESS REGION for each install plugin (LP: #438979).
  * GTK frontend:
    - When switching language, translate other top-level widgets (dialogs)
      and their children, as well as the main notebook pages (LP: #441622).
  * Install a dummy initctl similar to the dummy start-stop-daemon while
    doing anything that might install or remove packages in the target
    system, so that attempts to control Upstart jobs won't do anything.
  * Stop Upstart jobs when switching to runlevel 0 or 6, which I think fixes
    repeated respawns on shutdown (LP: #432140).
  * Save /var/log/installer/debug to the target system if it exists.